refactor: bootstrap and navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+
+  <%= render "lists/navbar" %>
+  
+  <div class="container">
     <%= yield %>
+  </div>
   </body>
 </html>
